Refactored entire code base. This commit now serves as initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@
 .idea
 .tmp
 
+# Turborepo files
+.turbo
+build/**
+dist/**
+.next/**
+
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
