--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
-//
 {
-  "name": "inchscale",
+  "name": "bitscale-ui",
   "version": "1.0.0",
-  "description": "",
+  "description": "Bitscale, is a Zero-Knowledge Rollup solution designed to boost blockchain scalability while preserving security and decentralization. BitScale provides an efficient and privacy-preserving platform for executing transactions and smart contracts. This README provides an overview of the technical specifications and project structure for developers interested in contributing to this innovative platform.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "packageManager": "npm@10.2.4",
+  "workspaces": [
+    "docs",
+    "apps/*",
+    "packages/*"
+  ],
   "keywords": [],
   "author": "Fedha",
-  "license": "ISC",
-  "workspaces": [
-    "packages/core",
-    "packages/network",
-    "packages/vm",
-    "packages/consensus",
-    "packages/contracts",
-    "packages/validator",
-    "packages/sequencers"
-  ]
+  "license": "ISC"
 }
